Add backend linting and CI workflows

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,5 +1,6 @@
+# Copy this file to .env and customize for local development
 PORT=3000
-JWT_SECRET=change-me
-DB_PATH=./data/app.db
+JWT_SECRET=dev-secret-change-me
+DATABASE_URL=./data/app.db
 ACCESS_TOKEN_TTL=900
 REFRESH_TOKEN_TTL=604800
