feat: add migrations, backups, and observability

--- a/Server/.env.example
+++ b/Server/.env.example
@@ -4,3 +4,6 @@ JWT_SECRET=dev-secret-change-me
 DATABASE_URL=./data/app.db
 ACCESS_TOKEN_TTL=900
 REFRESH_TOKEN_TTL=604800
+DB_BACKUP_DIR=./data/backups
+DB_BACKUP_INTERVAL_MINUTES=60
+DB_BACKUP_RETENTION_DAYS=7
