--- a/Server/package.json
+++ b/Server/package.json
@@ -8,7 +8,11 @@
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "test": "jest --runInBand --detectOpenHandles",
-    "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\""
+    "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
+    "migrate": "node dist/scripts/run-migrations.js",
+    "backup": "node dist/scripts/backup.js",
+    "restore": "node dist/scripts/restore.js",
+    "deploy": "npm run build && node dist/scripts/deploy.js"
   },
   "keywords": [],
   "author": "",
@@ -22,6 +26,8 @@
     "helmet": "^8.1.0",
     "jsonwebtoken": "^9.0.2",
     "morgan": "^1.10.1",
+    "pino": "^9.4.0",
+    "prom-client": "^15.1.2",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
     "ws": "^8.18.0"
