--- a/Server/package.json
+++ b/Server/package.json
@@ -5,6 +5,7 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "setup:local": "node scripts/setup-local.js",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
     "test": "jest --runInBand --detectOpenHandles",
