Add Client.Biomes assembly reference for Digger

--- a/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
+++ b/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
@@ -5,7 +5,8 @@
         "Unity.Mathematics",
         "Digger.Core",
         "JBooth.MicroSplat.Core",
-        "JBooth.MicroSplat.Core.Editor"
+        "JBooth.MicroSplat.Core.Editor",
+        "Client.Biomes"
     ],
     "includePlatforms": [
         "Editor"
