--- a/Assets/Digger/Modules/Runtime/Sources/Digger.Runtime.asmdef
+++ b/Assets/Digger/Modules/Runtime/Sources/Digger.Runtime.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Unity.Mathematics",
         "Unity.AI.Navigation",
-        "Digger.Core"
+        "Digger.Core",
+        "Client.Biomes"
     ],
     "includePlatforms": [],
     "excludePlatforms": [],
