Fix Digger editor terrain assembly reference

--- a/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
+++ b/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
@@ -6,7 +6,8 @@
         "Digger.Core",
         "JBooth.MicroSplat.Core",
         "JBooth.MicroSplat.Core.Editor",
-        "Client.Biomes"
+        "Client.Biomes",
+        "Assembly-CSharp"
     ],
     "includePlatforms": [
         "Editor"
