--- a/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
+++ b/Assets/Digger/Modules/Core/Editor/Digger.Core.Editor.asmdef
@@ -7,6 +7,7 @@
         "JBooth.MicroSplat.Core",
         "JBooth.MicroSplat.Core.Editor",
         "Client.Biomes",
+        "Client.Terrain",
         "Assembly-CSharp"
     ],
     "includePlatforms": [
