Add TextMeshPro reference to editor assembly

--- a/Assets/Editor/Realm.Editor.asmdef
+++ b/Assets/Editor/Realm.Editor.asmdef
@@ -4,7 +4,8 @@
     "references": [
         "Digger.Core",
         "Realm.Client",
-        "Realm.Data"
+        "Realm.Data",
+        "Unity.TextMeshPro"
     ],
     "includePlatforms": [
         "Editor"
