Fix editor TMP references for UI generators

--- a/Assets/Editor/Realm.Editor.asmdef
+++ b/Assets/Editor/Realm.Editor.asmdef
@@ -5,7 +5,8 @@
         "Digger.Core",
         "Realm.Client",
         "Realm.Data",
-        "Unity.TextMeshPro"
+        "Unity.TextMeshPro",
+        "Unity.TextMeshPro.Editor"
     ],
     "includePlatforms": [
         "Editor"
