--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,9 +1,12 @@
 # Copy this file to .env and customize for local development
 PORT=3000
 JWT_SECRET=dev-secret-change-me
-DATABASE_URL=./data/app.db
+DB_HOST=127.0.0.1
+DB_PORT=3306
+DB_USER=realm2
+DB_PASSWORD=
+DB_NAME=realm2
+DB_SSL=false
+DB_POOL_LIMIT=10
 ACCESS_TOKEN_TTL=900
 REFRESH_TOKEN_TTL=604800
-DB_BACKUP_DIR=./data/backups
-DB_BACKUP_INTERVAL_MINUTES=60
-DB_BACKUP_RETENTION_DAYS=7
