--- a/Server/.env.example
+++ b/Server/.env.example
@@ -1,5 +1,12 @@
 # Copy this file to .env and customize for local development
 PORT=3000
+GATEWAY_PORT=3000
+AUTH_PORT=3001
+WORLD_PORT=3002
+COMBAT_PORT=3003
+CATALOG_PORT=3004
+ECONOMY_PORT=3005
+SOCIAL_PORT=3006
 JWT_SECRET=dev-secret-change-me
 DB_HOST=127.0.0.1
 DB_PORT=3306
