--- a/Server/package.json
+++ b/Server/package.json
@@ -5,9 +5,23 @@
   "main": "dist/index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/index.ts",
+    "dev:services": "ts-node-dev --respawn --transpile-only src/servers/allServices.ts",
+    "dev:auth": "ts-node-dev --respawn --transpile-only src/servers/authService.ts",
+    "dev:world": "ts-node-dev --respawn --transpile-only src/servers/worldService.ts",
+    "dev:combat": "ts-node-dev --respawn --transpile-only src/servers/combatService.ts",
+    "dev:catalog": "ts-node-dev --respawn --transpile-only src/servers/catalogService.ts",
+    "dev:economy": "ts-node-dev --respawn --transpile-only src/servers/economyService.ts",
+    "dev:social": "ts-node-dev --respawn --transpile-only src/servers/socialService.ts",
     "setup:local": "node scripts/setup-local.js",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
+    "start:services": "node dist/servers/allServices.js",
+    "start:auth": "node dist/servers/authService.js",
+    "start:world": "node dist/servers/worldService.js",
+    "start:combat": "node dist/servers/combatService.js",
+    "start:catalog": "node dist/servers/catalogService.js",
+    "start:economy": "node dist/servers/economyService.js",
+    "start:social": "node dist/servers/socialService.js",
     "test": "jest --runInBand --detectOpenHandles",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
     "migrate": "node dist/scripts/run-migrations.js",
