Add terrain database and service

--- a/Server/package.json
+++ b/Server/package.json
@@ -12,6 +12,7 @@
     "dev:catalog": "ts-node-dev --respawn --transpile-only src/servers/catalogService.ts",
     "dev:economy": "ts-node-dev --respawn --transpile-only src/servers/economyService.ts",
     "dev:social": "ts-node-dev --respawn --transpile-only src/servers/socialService.ts",
+    "dev:terrain": "ts-node-dev --respawn --transpile-only src/servers/terrainService.ts",
     "setup:local": "node scripts/setup-local.js",
     "build": "tsc -p tsconfig.json",
     "start": "node dist/index.js",
@@ -22,6 +23,7 @@
     "start:catalog": "node dist/servers/catalogService.js",
     "start:economy": "node dist/servers/economyService.js",
     "start:social": "node dist/servers/socialService.js",
+    "start:terrain": "node dist/servers/terrainService.js",
     "test": "jest --runInBand --detectOpenHandles",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
     "migrate": "node dist/scripts/run-migrations.js",
