Move dev toolkit workflows to server
### Motivation
- Move the designer/creation workflows (abilities, items, weapons, armor, classes, progression data, etc.) out of Unity editor windows and into a server-backed developer toolkit so authored gameplay content lives in the database and can be used by the runtime services.
- Provide a lightweight local web UI and JSON endpoints so devs can author and upsert catalog records against the same DB/schema the server uses.

### Description
- Added a new dev toolkit service with a small UI shell and JSON API: `Server/src/apps/devToolkitApp.ts`, `Server/src/routes/devToolkitRoutes.ts`, `Server/src/routes/devToolkitUiRoutes.ts`, and `Server/src/servers/devToolkitService.ts` (served at `/` and `/api/devtools`).
- Implemented persistence and validation for authoring catalog entities via `Server/src/db/devToolkitRepository.ts` and the service layer in `Server/src/services/devToolkitService.ts`, supporting CRUD/upsert flows for items, weapons, armor, classes, class base stats, abilities, and named types (`weapon_types`, `ability_types`).
- Added helper lookups for weapon/armor/type records: `getWeaponByItemId` and `getArmorByItemId` in `Server/src/db/catalogRepository.ts` and `getWeaponTypeById`/`getAbilityTypeById` in `Server/src/db/referenceDataRepository.ts` to support read-after-write verification.
- Wired the dev toolkit into configuration and startup by adding `devToolkitPort` to `Server/src/config/env.ts`, adding `devtoolkit` scripts to `Server/package.json`, and starting the app from the aggregated `allServices` run in `Server/src/servers/allServices.ts`.
- Removed Unity editor-side designer windows and related assets that are now server responsibilities (deleted files under `Assets/Editor/DesignerTools/*` and `Assets/Editor/AbilityDesigner/*`) while leaving UI and terrain tooling untouched.

### Testing
- Attempted to start the dev toolkit locally with `npm run dev:devtoolkit`; the service attempted to initialize but failed

--- a/Server/package.json
+++ b/Server/package.json
@@ -13,6 +13,7 @@
     "dev:economy": "ts-node-dev --respawn --transpile-only src/servers/economyService.ts",
     "dev:social": "ts-node-dev --respawn --transpile-only src/servers/socialService.ts",
     "dev:terrain": "ts-node-dev --respawn --transpile-only src/servers/terrainService.ts",
+    "dev:devtoolkit": "ts-node-dev --respawn --transpile-only src/servers/devToolkitService.ts",
     "setup:local": "node scripts/setup-local.js",
     "import:terrain": "node scripts/import-terrain.js",
     "build": "tsc -p tsconfig.json",
@@ -25,6 +26,7 @@
     "start:economy": "node dist/servers/economyService.js",
     "start:social": "node dist/servers/socialService.js",
     "start:terrain": "node dist/servers/terrainService.js",
+    "start:devtoolkit": "node dist/servers/devToolkitService.js",
     "test": "jest --runInBand --detectOpenHandles",
     "lint": "eslint \"src/**/*.ts\" \"tests/**/*.ts\"",
     "migrate": "node dist/scripts/run-migrations.js",
